v0.14.2/_sources/projections/conic/conic_equidistant.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/conic/conic_equidistant.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_conic_conic_equidistant.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_conic_conic_equidistant.py:


Equidistant conic projection
============================

The equidistant conic projection was described by the Greek philosopher
Claudius Ptolemy about A.D. 150. It is neither conformal or equal-area, but
serves as a compromise between them. The scale is true along all meridians and
the standard parallels.

**d**\ *lon0/lat0*\ /\ *lat1/lat2*\ */scale*
or **D**\ *lon0/lat0*\ /\ *lat1/lat2*\ */width*

The projection is set with **d** or **D**. The projection center is set by
*lon0/lat0* and two standard parallels for the map are set with *lat1/lat2*.
The figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 19-30



.. image-sg:: /projections/conic/images/sphx_glr_conic_equidistant_001.png
   :alt: conic equidistant
   :srcset: /projections/conic/images/sphx_glr_conic_equidistant_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region=[-88, -70, 18, 24],
        projection="D-79/21/19/23/12c",
        frame="afg",
        land="seagreen",
        water="gray90",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.153 seconds)


.. _sphx_glr_download_projections_conic_conic_equidistant.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: conic_equidistant.ipynb <conic_equidistant.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: conic_equidistant.py <conic_equidistant.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: conic_equidistant.zip <conic_equidistant.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
